3.20/_sources/core/index.rst.txt


core
===================================

.. toctree::
   :maxdepth: 4
   :caption: core:

   Buttons
   Capabilities
   ColorrampFavoriteId
   ColorrampId
   ColorrampName
   ColorrampTable
   ColorrampXML
   DEFAULT_LINE_WIDTH
   DEFAULT_POINT_SIZE
   DEFAULT_SEGMENT_EPSILON
   Filters
   Flags
   GEOCRS_ID
   GEOPROJ4
   GEOSRID
   GEOWKT
   GEO_EPSG_CRS_AUTHID
   GEO_EPSG_CRS_ID
   GEO_NONE
   GeometryColumnCapabilities
   LabelSettingsFavoriteId
   LabelSettingsId
   LabelSettingsName
   LabelSettingsTable
   LabelSettingsXML
   LayerFlags
   MeshDriverCapabilities
   NULL
   PROJECT_SCALES
   ProjectDirtyBlocker
   PyQgsSettingsEntryEnumFlag
   Qgis
   Qgs25DRenderer
   Qgs3DRendererAbstractMetadata
   Qgs3DRendererRegistry
   Qgs3DSymbolAbstractMetadata
   Qgs3DSymbolRegistry
   QgsAbstract3DRenderer
   QgsAbstract3DSymbol
   QgsAbstractCacheIndex
   QgsAbstractContentCacheBase
   QgsAbstractContentCacheEntry
   QgsAbstractDatabaseProviderConnection
   QgsAbstractFeatureIterator
   QgsAbstractFeatureIteratorFromSourceQgsVectorLayerFeatureSourceBase
   QgsAbstractFeatureSource
   QgsAbstractGeocoderLocatorFilter
   QgsAbstractGeometry
   QgsAbstractGeometrySimplifier
   QgsAbstractGeometryTransformer
   QgsAbstractLayoutIterator
   QgsAbstractLayoutUndoCommand
   QgsAbstractMetadataBase
   QgsAbstractMetadataBaseValidator
   QgsAbstractPropertyCollection
   QgsAbstractProviderConnection
   QgsAbstractReportSection
   QgsAbstractValidityCheck
   QgsAbstractVectorLayerLabeling
   QgsAction
   QgsActionManager
   QgsActionScope
   QgsActionScopeRegistry
   QgsAggregateCalculator
   QgsAnimatedIcon
   QgsAnnotation
   QgsAnnotationItem
   QgsAnnotationItemAbstractMetadata
   QgsAnnotationItemRegistry
   QgsAnnotationLayer
   QgsAnnotationLineItem
   QgsAnnotationManager
   QgsAnnotationMarkerItem
   QgsAnnotationPointTextItem
   QgsAnnotationPolygonItem
   QgsApplication
   QgsArcGisPortalUtils
   QgsArcGisRestUtils
   QgsArchive
   QgsArrowSymbolLayer
   QgsAttributeEditorContainer
   QgsAttributeEditorElement
   QgsAttributeEditorField
   QgsAttributeEditorHtmlElement
   QgsAttributeEditorQmlElement
   QgsAttributeEditorRelation
   QgsAttributeTableConfig
   QgsAuthCertUtils
   QgsAuthConfigSslServer
   QgsAuthManager
   QgsAuthMethod
   QgsAuthMethodConfig
   QgsAuxiliaryLayer
   QgsAuxiliaryStorage
   QgsBalloonCallout
   QgsBasicNumericFormat
   QgsBearingNumericFormat
   QgsBearingUtils
   QgsBilinearRasterResampler
   QgsBlockingNetworkRequest
   QgsBlockingProcess
   QgsBlurEffect
   QgsBookmark
   QgsBookmarkManager
   QgsBookmarkManagerModel
   QgsBookmarkManagerProxyModel
   QgsBox3d
   QgsBrightnessContrastFilter
   QgsBrowserModel
   QgsBrowserProxyModel
   QgsCacheIndexFeatureId
   QgsCachedFeatureIterator
   QgsCachedFeatureWriterIterator
   QgsCadUtils
   QgsCallout
   QgsCalloutAbstractMetadata
   QgsCalloutMetadata
   QgsCalloutPosition
   QgsCalloutRegistry
   QgsCategorizedSymbolRenderer
   QgsCelestialBody
   QgsCentroidFillSymbolLayer
   QgsCheckBoxFieldFormatter
   QgsCircle
   QgsCircularString
   QgsClassificationCustom
   QgsClassificationEqualInterval
   QgsClassificationJenks
   QgsClassificationLogarithmic
   QgsClassificationMethod
   QgsClassificationMethodRegistry
   QgsClassificationPrettyBreaks
   QgsClassificationQuantile
   QgsClassificationRange
   QgsClassificationStandardDeviation
   QgsClipToMinMaxEnhancement
   QgsClipper
   QgsColorBrewerColorRamp
   QgsColorBrewerPalette
   QgsColorEffect
   QgsColorRamp
   QgsColorRampLegendNode
   QgsColorRampLegendNodeSettings
   QgsColorRampShader
   QgsColorRampTransformer
   QgsColorScheme
   QgsColorSchemeRegistry
   QgsCompoundCurve
   QgsConditionalLayerStyles
   QgsConditionalStyle
   QgsConnectionRegistry
   QgsConnectionsRootItem
   QgsConstWkbPtr
   QgsContrastEnhancement
   QgsContrastEnhancementFunction
   QgsCoordinateFormatter
   QgsCoordinateReferenceSystem
   QgsCoordinateReferenceSystemRegistry
   QgsCoordinateTransform
   QgsCoordinateTransformContext
   QgsCptCityAllRampsItem
   QgsCptCityArchive
   QgsCptCityBrowserModel
   QgsCptCityCollectionItem
   QgsCptCityColorRamp
   QgsCptCityColorRampItem
   QgsCptCityDataItem
   QgsCptCityDirectoryItem
   QgsCptCitySelectionItem
   QgsCredentials
   QgsCredentialsConsole
   QgsCredentialsNone
   QgsCsException
   QgsCubicRasterResampler
   QgsCurrencyNumericFormat
   QgsCurve
   QgsCurvePolygon
   QgsCurveTransform
   QgsCurvedLineCallout
   QgsCustomColorScheme
   QgsDartMeasurement
   QgsDataCollectionItem
   QgsDataDefinedSizeLegend
   QgsDataDefinedSizeLegendNode
   QgsDataItem
   QgsDataItemProvider
   QgsDataItemProviderRegistry
   QgsDataProvider
   QgsDataProviderTemporalCapabilities
   QgsDataSourceUri
   QgsDatabaseFilterProxyModel
   QgsDatabaseSchemaItem
   QgsDatabaseSchemaModel
   QgsDatabaseTableModel
   QgsDateRange
   QgsDateTimeFieldFormatter
   QgsDateTimeRange
   QgsDateTimeStatisticalSummary
   QgsDatumEnsemble
   QgsDatumEnsembleMember
   QgsDatumTransform
   QgsDefaultMeshLayerLegend
   QgsDefaultPointCloudLayerLegend
   QgsDefaultRasterLayerLegend
   QgsDefaultValue
   QgsDefaultVectorLayerLegend
   QgsDiagram
   QgsDiagramInterpolationSettings
   QgsDiagramLayerSettings
   QgsDiagramRenderer
   QgsDiagramSettings
   QgsDirectoryItem
   QgsDirectoryParamWidget
   QgsDistanceArea
   QgsDoubleBoxScaleBarRenderer
   QgsDoubleRange
   QgsDrawSourceEffect
   QgsDropShadowEffect
   QgsDxfExport
   QgsEditError
   QgsEditFormConfig
   QgsEditorWidgetSetup
   QgsEffectPainter
   QgsEffectStack
   QgsElevationUtils
   QgsEllipse
   QgsEllipseSymbolLayer
   QgsEllipsoidUtils
   QgsEmbeddedSymbolRenderer
   QgsError
   QgsErrorItem
   QgsErrorMessage
   QgsException
   QgsExpression
   QgsExpressionContext
   QgsExpressionContextGenerator
   QgsExpressionContextScope
   QgsExpressionContextScopeGenerator
   QgsExpressionContextUtils
   QgsExpressionFieldBuffer
   QgsExpressionFunction
   QgsExpressionNode
   QgsExpressionNodeBinaryOperator
   QgsExpressionNodeColumnRef
   QgsExpressionNodeCondition
   QgsExpressionNodeFunction
   QgsExpressionNodeInOperator
   QgsExpressionNodeIndexOperator
   QgsExpressionNodeLiteral
   QgsExpressionNodeUnaryOperator
   QgsFallbackFieldFormatter
   QgsFallbackNumericFormat
   QgsFavoritesItem
   QgsFeature
   QgsFeatureFilterModel
   QgsFeatureFilterProvider
   QgsFeatureIterator
   QgsFeaturePickerModel
   QgsFeaturePickerModelBase
   QgsFeatureRenderer
   QgsFeatureRendererGenerator
   QgsFeatureRequest
   QgsFeatureSink
   QgsFeatureSource
   QgsFeatureStore
   QgsFeedback
   QgsFetchedContent
   QgsField
   QgsFieldConstraints
   QgsFieldFormatter
   QgsFieldFormatterContext
   QgsFieldFormatterRegistry
   QgsFieldItem
   QgsFieldModel
   QgsFieldProxyModel
   QgsFields
   QgsFieldsItem
   QgsFileDownloader
   QgsFileFilterGenerator
   QgsFileUtils
   QgsFillSymbol
   QgsFillSymbolLayer
   QgsFilledMarkerSymbolLayer
   QgsFontMarkerSymbolLayer
   QgsFontUtils
   QgsFractionNumericFormat
   QgsGenericNumericTransformer
   QgsGeoNodeConnection
   QgsGeoNodeConnectionUtils
   QgsGeoNodeRequest
   QgsGeoNodeStyle
   QgsGeocoderContext
   QgsGeocoderInterface
   QgsGeocoderResult
   QgsGeometry
   QgsGeometryCollection
   QgsGeometryConstPartIterator
   QgsGeometryEngine
   QgsGeometryGeneratorSymbolLayer
   QgsGeometryOptions
   QgsGeometryPartIterator
   QgsGeometryUtils
   QgsGeometryValidator
   QgsGlowEffect
   QgsGml
   QgsGmlFeatureClass
   QgsGmlSchema
   QgsGoogleMapsGeocoder
   QgsGplColorScheme
   QgsGpsConnection
   QgsGpsConnectionRegistry
   QgsGpsDetector
   QgsGpsInformation
   QgsGpsdConnection
   QgsGradientColorRamp
   QgsGradientFillSymbolLayer
   QgsGradientStop
   QgsGraduatedSymbolRenderer
   QgsHashedLineSymbolLayer
   QgsHeatmapRenderer
   QgsHillshadeRenderer
   QgsHistogram
   QgsHistogramDiagram
   QgsHollowScaleBarRenderer
   QgsHstoreUtils
   QgsHtmlAnnotation
   QgsHtmlUtils
   QgsHueSaturationFilter
   QgsIconUtils
   QgsIdentifyContext
   QgsImageCache
   QgsImageFetcher
   QgsImageFillSymbolLayer
   QgsImageLegendNode
   QgsImageOperation
   QgsInnerGlowEffect
   QgsInnerShadowEffect
   QgsIntRange
   QgsInterpolatedLineColor
   QgsInterpolatedLineRenderer
   QgsInterpolatedLineSymbolLayer
   QgsInterpolatedLineWidth
   QgsInterval
   QgsInvertedPolygonRenderer
   QgsJsonExporter
   QgsJsonUtils
   QgsKeyValueFieldFormatter
   QgsLabelBlockingRegion
   QgsLabelCandidate
   QgsLabelLineSettings
   QgsLabelObstacleSettings
   QgsLabelPosition
   QgsLabelSearchTree
   QgsLabelThinningSettings
   QgsLabeling
   QgsLabelingEngineSettings
   QgsLabelingResults
   QgsLayerDefinition
   QgsLayerItem
   QgsLayerMetadata
   QgsLayerMetadataFormatter
   QgsLayerNotesUtils
   QgsLayerTree
   QgsLayerTreeFilterProxyModel
   QgsLayerTreeGroup
   QgsLayerTreeLayer
   QgsLayerTreeModel
   QgsLayerTreeModelLegendNode
   QgsLayerTreeNode
   QgsLayerTreeRegistryBridge
   QgsLayerTreeUtils
   QgsLayout
   QgsLayoutAligner
   QgsLayoutAtlas
   QgsLayoutEffect
   QgsLayoutExporter
   QgsLayoutFrame
   QgsLayoutGridSettings
   QgsLayoutGuide
   QgsLayoutGuideCollection
   QgsLayoutGuideProxyModel
   QgsLayoutItem
   QgsLayoutItemAbstractMetadata
   QgsLayoutItemAttributeTable
   QgsLayoutItemGroup
   QgsLayoutItemHtml
   QgsLayoutItemLabel
   QgsLayoutItemLegend
   QgsLayoutItemManualTable
   QgsLayoutItemMap
   QgsLayoutItemMapAtlasClippingSettings
   QgsLayoutItemMapGrid
   QgsLayoutItemMapGridStack
   QgsLayoutItemMapItem
   QgsLayoutItemMapItemClipPathSettings
   QgsLayoutItemMapItemStack
   QgsLayoutItemMapOverview
   QgsLayoutItemMapOverviewStack
   QgsLayoutItemMarker
   QgsLayoutItemPage
   QgsLayoutItemPicture
   QgsLayoutItemPolygon
   QgsLayoutItemPolyline
   QgsLayoutItemRegistry
   QgsLayoutItemRenderContext
   QgsLayoutItemScaleBar
   QgsLayoutItemShape
   QgsLayoutItemTextTable
   QgsLayoutManager
   QgsLayoutManagerModel
   QgsLayoutManagerProxyModel
   QgsLayoutMeasurement
   QgsLayoutMeasurementConverter
   QgsLayoutModel
   QgsLayoutMultiFrame
   QgsLayoutMultiFrameAbstractMetadata
   QgsLayoutNodesItem
   QgsLayoutNorthArrowHandler
   QgsLayoutObject
   QgsLayoutPageCollection
   QgsLayoutPoint
   QgsLayoutProxyModel
   QgsLayoutRenderContext
   QgsLayoutReportContext
   QgsLayoutSerializableObject
   QgsLayoutSize
   QgsLayoutSnapper
   QgsLayoutTable
   QgsLayoutTableColumn
   QgsLayoutTableStyle
   QgsLayoutUndoObjectInterface
   QgsLayoutUndoStack
   QgsLayoutUtils
   QgsLayoutValidityCheckContext
   QgsLegendModel
   QgsLegendPatchShape
   QgsLegendRenderer
   QgsLegendSettings
   QgsLegendStyle
   QgsLegendSymbolItem
   QgsLimitedRandomColorRamp
   QgsLinePatternFillSymbolLayer
   QgsLineSegment2D
   QgsLineString
   QgsLineSymbol
   QgsLineSymbolLayer
   QgsLinearMinMaxEnhancement
   QgsLinearMinMaxEnhancementWithClip
   QgsLinearlyInterpolatedDiagramRenderer
   QgsListFieldFormatter
   QgsLocalDefaultSettings
   QgsLocalizedDataPathRegistry
   QgsLocator
   QgsLocatorAutomaticModel
   QgsLocatorContext
   QgsLocatorFilter
   QgsLocatorModel
   QgsLocatorModelBridge
   QgsLocatorProxyModel
   QgsLocatorResult
   QgsLogger
   QgsManhattanLineCallout
   QgsMapBoxGlStyleConversionContext
   QgsMapBoxGlStyleConverter
   QgsMapClippingRegion
   QgsMapClippingUtils
   QgsMapDecoration
   QgsMapHitTest
   QgsMapInfoSymbolConversionContext
   QgsMapInfoSymbolConverter
   QgsMapLayer
   QgsMapLayerDependency
   QgsMapLayerElevationProperties
   QgsMapLayerFactory
   QgsMapLayerLegend
   QgsMapLayerLegendUtils
   QgsMapLayerModel
   QgsMapLayerProxyModel
   QgsMapLayerRenderer
   QgsMapLayerStore
   QgsMapLayerStyle
   QgsMapLayerStyleManager
   QgsMapLayerStyleOverride
   QgsMapLayerTemporalProperties
   QgsMapLayerType
   QgsMapLayerUtils
   QgsMapRendererAbstractCustomPainterJob
   QgsMapRendererCache
   QgsMapRendererCustomPainterJob
   QgsMapRendererJob
   QgsMapRendererParallelJob
   QgsMapRendererQImageJob
   QgsMapRendererSequentialJob
   QgsMapRendererTask
   QgsMapSettings
   QgsMapSettingsUtils
   QgsMapThemeCollection
   QgsMapToPixel
   QgsMapToPixelSimplifier
   QgsMapUnitScale
   QgsMargins
   QgsMarkerLineSymbolLayer
   QgsMarkerSymbol
   QgsMarkerSymbolLayer
   QgsMaskIdProvider
   QgsMaskMarkerSymbolLayer
   QgsMasterLayoutInterface
   QgsMemoryProviderUtils
   QgsMergedFeatureRenderer
   QgsMesh
   QgsMesh3dAveragingMethod
   QgsMesh3dDataBlock
   QgsMeshCalculator
   QgsMeshDataBlock
   QgsMeshDataProvider
   QgsMeshDataProviderTemporalCapabilities
   QgsMeshDataSourceInterface
   QgsMeshDataset
   QgsMeshDatasetGroup
   QgsMeshDatasetGroupMetadata
   QgsMeshDatasetGroupTreeItem
   QgsMeshDatasetIndex
   QgsMeshDatasetMetadata
   QgsMeshDatasetSourceInterface
   QgsMeshDatasetValue
   QgsMeshDriverMetadata
   QgsMeshElevationAveragingMethod
   QgsMeshLayer
   QgsMeshLayerTemporalProperties
   QgsMeshMultiLevelsAveragingMethod
   QgsMeshRelativeHeightAveragingMethod
   QgsMeshRendererMeshSettings
   QgsMeshRendererScalarSettings
   QgsMeshRendererSettings
   QgsMeshRendererVectorArrowSettings
   QgsMeshRendererVectorSettings
   QgsMeshRendererVectorStreamlineSettings
   QgsMeshRendererVectorTracesSettings
   QgsMeshSigmaAveragingMethod
   QgsMeshSpatialIndex
   QgsMeshTimeSettings
   QgsMeshUtils
   QgsMeshVectorTraceAnimationGenerator
   QgsMessageLog
   QgsMessageLogConsole
   QgsMessageLogNotifyBlocker
   QgsMessageOutput
   QgsMessageOutputConsole
   QgsMetadataUtils
   QgsMimeDataUtils
   QgsMultiBandColorRenderer
   QgsMultiCurve
   QgsMultiLineString
   QgsMultiPoint
   QgsMultiPolygon
   QgsMultiRenderChecker
   QgsMultiSurface
   QgsNativeMetadataBaseValidator
   QgsNativeMetadataValidator
   QgsNativeProjectMetadataValidator
   QgsNetworkAccessManager
   QgsNetworkContentFetcher
   QgsNetworkContentFetcherRegistry
   QgsNetworkContentFetcherTask
   QgsNetworkReplyContent
   QgsNetworkRequestParameters
   QgsNewsFeedModel
   QgsNewsFeedParser
   QgsNewsFeedProxyModel
   QgsNmeaConnection
   QgsNominatimGeocoder
   QgsNotSupportedException
   QgsNullSymbolRenderer
   QgsNumericFormat
   QgsNumericFormatContext
   QgsNumericFormatRegistry
   QgsNumericScaleBarRenderer
   QgsObjectCustomProperties
   QgsOfflineEditing
   QgsOgcUtils
   QgsOptionalExpression
   QgsOptionalQgsExpressionBase
   QgsOuterGlowEffect
   QgsOwsConnection
   QgsPageSize
   QgsPageSizeRegistry
   QgsPaintEffect
   QgsPaintEffectAbstractMetadata
   QgsPaintEffectRegistry
   QgsPaintEngineHack
   QgsPainting
   QgsPalLabeling
   QgsPalLayerSettings
   QgsPalettedRasterRenderer
   QgsPathResolver
   QgsPercentageNumericFormat
   QgsPieDiagram
   QgsPkiBundle
   QgsPkiConfigBundle
   QgsPluginLayer
   QgsPluginLayerRegistry
   QgsPluginLayerType
   QgsPoint
   QgsPointCloudAttribute
   QgsPointCloudAttributeByRampRenderer
   QgsPointCloudAttributeCollection
   QgsPointCloudAttributeModel
   QgsPointCloudAttributeProxyModel
   QgsPointCloudBlock
   QgsPointCloudCategory
   QgsPointCloudClassifiedRenderer
   QgsPointCloudDataProvider
   QgsPointCloudExtentRenderer
   QgsPointCloudLayer
   QgsPointCloudLayerElevationProperties
   QgsPointCloudRenderContext
   QgsPointCloudRenderer
   QgsPointCloudRendererAbstractMetadata
   QgsPointCloudRendererMetadata
   QgsPointCloudRendererRegistry
   QgsPointCloudRgbRenderer
   QgsPointClusterRenderer
   QgsPointDisplacementRenderer
   QgsPointDistanceRenderer
   QgsPointLocator
   QgsPointPatternFillSymbolLayer
   QgsPointXY
   QgsPolygon
   QgsPolymorphicRelation
   QgsPostgresStringUtils
   QgsPresetSchemeColorRamp
   QgsPrintLayout
   QgsProcessing
   QgsProcessingAlgRunnerTask
   QgsProcessingAlgorithm
   QgsProcessingContext
   QgsProcessingDestinationParameter
   QgsProcessingException
   QgsProcessingFeatureBasedAlgorithm
   QgsProcessingFeatureSource
   QgsProcessingFeatureSourceDefinition
   QgsProcessingFeedback
   QgsProcessingLayerPostProcessorInterface
   QgsProcessingModelAlgorithm
   QgsProcessingModelChildAlgorithm
   QgsProcessingModelChildDependency
   QgsProcessingModelChildParameterSource
   QgsProcessingModelComment
   QgsProcessingModelComponent
   QgsProcessingModelGroupBox
   QgsProcessingModelOutput
   QgsProcessingModelParameter
   QgsProcessingMultiStepFeedback
   QgsProcessingOutputBoolean
   QgsProcessingOutputConditionalBranch
   QgsProcessingOutputDefinition
   QgsProcessingOutputFile
   QgsProcessingOutputFolder
   QgsProcessingOutputHtml
   QgsProcessingOutputLayerDefinition
   QgsProcessingOutputMapLayer
   QgsProcessingOutputMultipleLayers
   QgsProcessingOutputNumber
   QgsProcessingOutputRasterLayer
   QgsProcessingOutputString
   QgsProcessingOutputVectorLayer
   QgsProcessingParameterAggregate
   QgsProcessingParameterAuthConfig
   QgsProcessingParameterBand
   QgsProcessingParameterBoolean
   QgsProcessingParameterColor
   QgsProcessingParameterCoordinateOperation
   QgsProcessingParameterCrs
   QgsProcessingParameterDatabaseSchema
   QgsProcessingParameterDatabaseTable
   QgsProcessingParameterDateTime
   QgsProcessingParameterDefinition
   QgsProcessingParameterDistance
   QgsProcessingParameterDxfLayers
   QgsProcessingParameterEnum
   QgsProcessingParameterExpression
   QgsProcessingParameterExtent
   QgsProcessingParameterFeatureSink
   QgsProcessingParameterFeatureSource
   QgsProcessingParameterField
   QgsProcessingParameterFieldMapping
   QgsProcessingParameterFile
   QgsProcessingParameterFileDestination
   QgsProcessingParameterFolderDestination
   QgsProcessingParameterGeometry
   QgsProcessingParameterLayout
   QgsProcessingParameterLayoutItem
   QgsProcessingParameterLimitedDataTypes
   QgsProcessingParameterMapLayer
   QgsProcessingParameterMapTheme
   QgsProcessingParameterMatrix
   QgsProcessingParameterMeshDatasetGroups
   QgsProcessingParameterMeshDatasetTime
   QgsProcessingParameterMeshLayer
   QgsProcessingParameterMultipleLayers
   QgsProcessingParameterNumber
   QgsProcessingParameterPoint
   QgsProcessingParameterProviderConnection
   QgsProcessingParameterRange
   QgsProcessingParameterRasterDestination
   QgsProcessingParameterRasterLayer
   QgsProcessingParameterScale
   QgsProcessingParameterString
   QgsProcessingParameterTinInputLayers
   QgsProcessingParameterType
   QgsProcessingParameterVectorDestination
   QgsProcessingParameterVectorLayer
   QgsProcessingParameterVectorTileWriterLayers
   QgsProcessingParameters
   QgsProcessingProvider
   QgsProcessingRegistry
   QgsProcessingUtils
   QgsProjOperation
   QgsProjUtils
   QgsProject
   QgsProjectArchive
   QgsProjectBadLayerHandler
   QgsProjectColorScheme
   QgsProjectDirtyBlocker
   QgsProjectDisplaySettings
   QgsProjectFileTransform
   QgsProjectItem
   QgsProjectMetadata
   QgsProjectProperty
   QgsProjectPropertyKey
   QgsProjectPropertyValue
   QgsProjectServerValidator
   QgsProjectStorage
   QgsProjectStorageRegistry
   QgsProjectTimeSettings
   QgsProjectTranslator
   QgsProjectVersion
   QgsProjectViewSettings
   QgsProjectionFactors
   QgsProperty
   QgsPropertyCollection
   QgsPropertyCollectionStack
   QgsPropertyDefinition
   QgsPropertyTransformer
   QgsProviderConnectionException
   QgsProviderConnectionModel
   QgsProviderMetadata
   QgsProviderRegistry
   QgsProxyFeatureSink
   QgsProxyProgressTask
   QgsPythonRunner
   QgsQuadrilateral
   QgsQueryResultModel
   QgsRandomColorRamp
   QgsRandomMarkerFillSymbolLayer
   QgsRangeFieldFormatter
   QgsRangedoubleBase
   QgsRangeintBase
   QgsRaster
   QgsRasterBandStats
   QgsRasterBlock
   QgsRasterBlockFeedback
   QgsRasterChecker
   QgsRasterContourRenderer
   QgsRasterDataProvider
   QgsRasterDataProviderTemporalCapabilities
   QgsRasterDrawer
   QgsRasterFileWriter
   QgsRasterFileWriterTask
   QgsRasterFillSymbolLayer
   QgsRasterHistogram
   QgsRasterIdentifyResult
   QgsRasterInterface
   QgsRasterIterator
   QgsRasterLayer
   QgsRasterLayerTemporalProperties
   QgsRasterMarkerSymbolLayer
   QgsRasterMinMaxOrigin
   QgsRasterNuller
   QgsRasterPipe
   QgsRasterProjector
   QgsRasterPyramid
   QgsRasterRange
   QgsRasterRenderer
   QgsRasterRendererUtils
   QgsRasterResampleFilter
   QgsRasterResampler
   QgsRasterResamplerV2
   QgsRasterShader
   QgsRasterShaderFunction
   QgsRasterSymbolLegendNode
   QgsRasterTransparency
   QgsRasterViewPort
   QgsRay3D
   QgsReadWriteContext
   QgsReadWriteContextCategoryPopper
   QgsReadWriteLocker
   QgsRecentColorScheme
   QgsRectangle
   QgsReferencedGeometry
   QgsReferencedGeometryBase
   QgsReferencedPointXY
   QgsReferencedRectangle
   QgsRegularPolygon
   QgsRelation
   QgsRelationContext
   QgsRelationManager
   QgsRelationReferenceFieldFormatter
   QgsRemappingProxyFeatureSink
   QgsRemappingSinkDefinition
   QgsRenderChecker
   QgsRenderContext
   QgsRenderedFeatureHandlerInterface
   QgsRendererAbstractMetadata
   QgsRendererCategory
   QgsRendererMetadata
   QgsRendererRange
   QgsRendererRangeLabelFormat
   QgsRendererRegistry
   QgsReport
   QgsReportSectionContext
   QgsReportSectionFieldGroup
   QgsReportSectionLayout
   QgsRuleBasedLabeling
   QgsRuleBasedRenderer
   QgsRunProcess
   QgsRuntimeProfiler
   QgsSQLStatement
   QgsSQLStatementFragment
   QgsSVGFillSymbolLayer
   QgsSatelliteInfo
   QgsScaleBarRenderer
   QgsScaleBarRendererRegistry
   QgsScaleBarSettings
   QgsScaleCalculator
   QgsScaleUtils
   QgsScientificNumericFormat
   QgsScopeLogger
   QgsScopedExpressionFunction
   QgsScopedProxyProgressTask
   QgsScopedRuntimeProfile
   QgsSettings
   QgsSettingsEntryBase
   QgsSettingsEntryBool
   QgsSettingsEntryColor
   QgsSettingsEntryDouble
   QgsSettingsEntryEnumFlag
   QgsSettingsEntryInteger
   QgsSettingsEntryString
   QgsSettingsEntryStringList
   QgsSettingsEntryVariant
   QgsSettingsRegistry
   QgsSettingsRegistryCore
   QgsShadowEffect
   QgsShapeburstFillSymbolLayer
   QgsSimpleFillSymbolLayer
   QgsSimpleLegendNode
   QgsSimpleLineCallout
   QgsSimpleLineSymbolLayer
   QgsSimpleMarkerSymbolLayer
   QgsSimpleMarkerSymbolLayerBase
   QgsSimplifyMethod
   QgsSingleBandColorDataRenderer
   QgsSingleBandGrayRenderer
   QgsSingleBandPseudoColorRenderer
   QgsSingleBoxScaleBarRenderer
   QgsSingleCategoryDiagramRenderer
   QgsSingleSymbolRenderer
   QgsSizeScaleTransformer
   QgsSnappingConfig
   QgsSnappingUtils
   QgsSourceCache
   QgsSpatialIndex
   QgsSpatialIndexKDBush
   QgsSpatialIndexKDBushData
   QgsSqliteUtils
   QgsStackedBarDiagram
   QgsStatisticalSummary
   QgsSteppedLineScaleBarRenderer
   QgsStoredExpression
   QgsStoredExpressionManager
   QgsStringReplacement
   QgsStringReplacementCollection
   QgsStringStatisticalSummary
   QgsStringUtils
   QgsStyle
   QgsStyleColorRampEntity
   QgsStyleEntityInterface
   QgsStyleEntityVisitorInterface
   QgsStyleLabelSettingsEntity
   QgsStyleLegendPatchShapeEntity
   QgsStyleModel
   QgsStyleProxyModel
   QgsStyleSymbol3DEntity
   QgsStyleSymbolEntity
   QgsStyleTextFormatEntity
   QgsSurface
   QgsSvgAnnotation
   QgsSvgCache
   QgsSvgMarkerSymbolLayer
   QgsSymbol
   QgsSymbolLayer
   QgsSymbolLayerAbstractMetadata
   QgsSymbolLayerId
   QgsSymbolLayerMetadata
   QgsSymbolLayerReference
   QgsSymbolLayerRegistry
   QgsSymbolLayerUtils
   QgsSymbolLegendNode
   QgsSymbolLevelItem
   QgsSymbolRenderContext
   QgsTableCell
   QgsTask
   QgsTaskManager
   QgsTaskWrapper
   QgsTemplatedLineSymbolLayerBase
   QgsTemporalController
   QgsTemporalNavigationObject
   QgsTemporalProperty
   QgsTemporalRangeObject
   QgsTemporalUtils
   QgsTessellator
   QgsTestUtils
   QgsTextAnnotation
   QgsTextBackgroundSettings
   QgsTextBlock
   QgsTextBufferSettings
   QgsTextCharacterFormat
   QgsTextDiagram
   QgsTextDocument
   QgsTextFormat
   QgsTextFragment
   QgsTextMaskSettings
   QgsTextRenderer
   QgsTextRendererUtils
   QgsTextShadowSettings
   QgsTicksScaleBarRenderer
   QgsTileMatrix
   QgsTileRange
   QgsTileXYZ
   QgsTolerance
   QgsTopologyPreservingSimplifier
   QgsTracer
   QgsTrackedVectorLayerTools
   QgsTransaction
   QgsTransactionGroup
   QgsTransformEffect
   QgsTranslationContext
   QgsTriangle
   QgsUnitTypes
   QgsUserColorScheme
   QgsUserProfile
   QgsUserProfileManager
   QgsValidityCheckContext
   QgsValidityCheckRegistry
   QgsValidityCheckResult
   QgsValueMapFieldFormatter
   QgsValueRelationFieldFormatter
   QgsVector
   QgsVector3D
   QgsVectorDataProvider
   QgsVectorDataProviderTemporalCapabilities
   QgsVectorFieldSymbolLayer
   QgsVectorFileWriter
   QgsVectorFileWriterTask
   QgsVectorLabelLegendNode
   QgsVectorLayer
   QgsVectorLayerCache
   QgsVectorLayerEditBuffer
   QgsVectorLayerEditPassthrough
   QgsVectorLayerEditUtils
   QgsVectorLayerExporter
   QgsVectorLayerExporterTask
   QgsVectorLayerFeatureCounter
   QgsVectorLayerFeatureIterator
   QgsVectorLayerFeatureSource
   QgsVectorLayerJoinBuffer
   QgsVectorLayerJoinInfo
   QgsVectorLayerSelectedFeatureSource
   QgsVectorLayerServerProperties
   QgsVectorLayerSimpleLabeling
   QgsVectorLayerTemporalContext
   QgsVectorLayerTemporalProperties
   QgsVectorLayerTools
   QgsVectorLayerUndoCommand
   QgsVectorLayerUndoCommandAddAttribute
   QgsVectorLayerUndoCommandAddFeature
   QgsVectorLayerUndoCommandChangeAttribute
   QgsVectorLayerUndoCommandChangeGeometry
   QgsVectorLayerUndoCommandDeleteAttribute
   QgsVectorLayerUndoCommandDeleteFeature
   QgsVectorLayerUndoCommandRenameAttribute
   QgsVectorLayerUndoPassthroughCommand
   QgsVectorLayerUndoPassthroughCommandAddAttribute
   QgsVectorLayerUndoPassthroughCommandAddFeatures
   QgsVectorLayerUndoPassthroughCommandChangeAttribute
   QgsVectorLayerUndoPassthroughCommandChangeAttributes
   QgsVectorLayerUndoPassthroughCommandChangeGeometry
   QgsVectorLayerUndoPassthroughCommandDeleteAttribute
   QgsVectorLayerUndoPassthroughCommandDeleteFeatures
   QgsVectorLayerUndoPassthroughCommandRenameAttribute
   QgsVectorLayerUndoPassthroughCommandUpdate
   QgsVectorLayerUtils
   QgsVectorSimplifyMethod
   QgsVectorTileBasicLabeling
   QgsVectorTileBasicLabelingStyle
   QgsVectorTileBasicRenderer
   QgsVectorTileBasicRendererStyle
   QgsVectorTileLabeling
   QgsVectorTileLayer
   QgsVectorTileRenderer
   QgsVectorTileRendererData
   QgsVectorTileWriter
   QgsVertexId
   QgsVertexIterator
   QgsVirtualLayerDefinition
   QgsVirtualLayerDefinitionUtils
   QgsVirtualLayerTask
   QgsWkbPtr
   QgsWkbTypes
   QgsWmsLegendNode
   QgsXmlUtils
   QgsZipItem
   QgsZipUtils
   ReadWriteContextEnterCategory
   ScopedRuntimeProfileContextManager
   SimplifyHints
   SmartgroupId
   SmartgroupName
   SmartgroupTable
   SmartgroupXML
   SnappingTypeFlag
   StyleCategories
   SymbolFavoriteId
   SymbolId
   SymbolName
   SymbolTable
   SymbolXML
   TableFlags
   TagId
   TagName
   TagTable
   TagmapSymbolId
   TagmapTable
   TagmapTagId
   TextFormatFavoriteId
   TextFormatId
   TextFormatName
   TextFormatTable
   TextFormatXML
   USER_CRS_START_ID
   additions
   check
   compareWkt
   date_range_repr
   datetime_range_repr
   edit
   fromFunction
   geoEpsgCrsAuthId
   geoNone
   geoProj4
   geoWkt
   mapping_feature
   mapping_geometry
   metaEnumFromType
   metaEnumFromValue
   processing_output_layer_repr
   processing_source_repr
   qHash
   qgsDoubleNear
   qgsDoubleNearSig
   qgsDoubleToString
   qgsFloatNear
   qgsNanCompatibleEquals
   qgsPermissiveToDouble
   qgsPermissiveToInt
   qgsPermissiveToLongLong
   qgsRound
   qgsVariantEqual
   qgsVariantGreaterThan
   qgsVariantLessThan
   qgsVsiPrefix
   qgsfunction
   register_function
   stringToSymbolLayerReferenceList
   symbolLayerReferenceListToString
